added zfcuser to auth

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zendframework/skeleton-application",
-    "description": "Skeleton Application for ZF2",
+    "description": "Todo application for aviaSG",
     "license": "BSD-3-Clause",
     "keywords": [
         "framework",
@@ -9,8 +9,8 @@
     "homepage": "http://framework.zend.com/",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zendframework": "~2.4",
-        "doctrine/doctrine-module": "dev-master",
-        "doctrine/doctrine-orm-module": "dev-master"
+        "zendframework/zendframework": "~2.4",      
+        "zf-commons/zfc-user": "~1.2",
+        "zf-commons/zfc-user": "~0.1"       
     }
 }
